# Artifex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  artifex.h  embuild.sh  mixer.h  window.h
.github/: COMPONENTS.md  FUNDING.yml  README.md  TYPELESS.md
artifex/: artifex.h
artifex/core/: load.h  mixer.h  window.h
artifex/types/: matrix.h  vector.h
examples/: CMakeLists.txt  README.md
examples/audio/: CMakeLists.txt
examples/audio/mix_simple/: CMakeLists.txt  main.cpp  stb_vorbis.c
examples/ecs/hello_world/: CMakeLists.txt  main.cpp
examples/games/: CMakeLists.txt
examples/games/flappy_bird/: CMakeLists.txt  main.cpp
examples/gfx_simple/: CMakeLists.txt  main.cpp
examples/gfx_simple/shader/: 2d.glsl
examples/graphics/: CMakeLists.txt
examples/graphics/gfx_simple/: main.cpp  stb_image.h
examples/hello_ecs/: CMakeLists.txt  main.c
examples/hello_modules/: CMakeLists.txt  main.c
examples/hello_world/: main.cpp
examples/hello_world/shader/: 2d.glsl
examples/mix_simple/: main.cpp
examples/physics_simple/: CMakeLists.txt  main.cpp
examples/renderer/: CMakeLists.txt
examples/renderer/hello_renderer/: CMakeLists.txt  main.c  main.cpp
examples/renderer/multi_context/: CMakeLists.txt  main.c  main.cpp
examples/renderer/render_texture/: CMakeLists.txt  main.c  main.cpp
examples/window/: CMakeLists.txt
examples/window/hello_window/: CMakeLists.txt  main.c  main.cpp
hello_artifex/: CMakeLists.txt  main.cpp
hello_artifex/shader/: 2d.glsl  test.glsl
hello_world/: CMakeLists.txt  main.cpp
include/Artifex/: Artifex.h  Artifex.hpp  AssetManager.hpp  ECS.hpp  Engine.hpp  Log.hpp  Mixer.hpp  Physics.hpp  Renderer.hpp  Window.hpp  load.h  templated.hpp
include/Artifex/ECS/: Column.hpp  World.hpp
include/Artifex/audio/: Capture.hpp  Mix.hpp
include/Artifex/core/: Load.hpp  Log.hpp  Mix.hpp  Physics.hpp  Render.hpp  Renderer.hpp  UI.hpp  Window.h  Window.hpp  load.hpp  mixer.h  mixer.hpp  renderer.hpp  utility.h  utility.hpp  window.hpp
include/Artifex/graphics/: Renderer.hpp  Window.hpp
include/Artifex/math/: mat.hpp  vec.hpp
include/Artifex/modules/: Graphics.hpp
include/Artifex/physics/: Physics.hpp
include/Artifex/types/: Ref.hpp  entity.hpp  module.hpp  resources.h  scene.hpp  shader.h  shader.hpp  types.h  types.hpp  uuid.hpp  vec.hpp  vector.h
include/Artifex/ui/: layout.hpp  modifier.hpp
include/Artifex/utility/: Clock.hpp  ComponentMap.hpp  ECS.hpp  Log.hpp  RAW.hpp  construct.hpp  mixer.hpp  utility.hpp  uuid.h
include/GL/: load.h  stb_image.h
modules/: CMakeLists.txt
old/mixer/src/: cxx_bindings.cpp
old/renderer/src/: cxx_bindings.cpp  renderer.c
old/window/: CMakeLists.txt
src/: Artifex.cpp  AssetManager.cpp  Engine.cpp  Log.cpp  Mixer.cpp  Physics.cpp  Renderer.cpp  Window.cpp  load.cpp  meshes.h  shaders.h
src/Artifex/: Engine.cpp  component.cpp  entity.cpp  module.cpp
src/Artifex/audio/: Capture.cpp  Mix.cpp
src/Artifex/core/: Load.cpp  Log.cpp  Mix.cpp  Physics.cpp  UI.cpp
src/Artifex/graphics/: Window.cpp  draw.cpp  load.cpp  renderer.cpp  shader.cpp
src/Artifex/modules/: Graphics.cpp
src/Artifex/physics/: collisions.cpp  physics.cpp
src/Artifex/renderer/: draw.cpp  load.cpp  renderer.cpp  shader.cpp  window.cpp
src/Artifex/types/: .clang-format  module.cpp  shader.cpp
src/Artifex/ui/: layout.cpp  modifier.cpp
src/Artifex/utility/: Clock.cpp  Log.cpp  uuid.c
src/ECS/: Type.cpp  World.cpp
src/GL/: glad.c  stb_image.c
src/core/: Load.cpp  Log.cpp  Mix.cpp  Physics.cpp  Render.cpp  Renderer.cpp  UI.cpp  Window.cpp  renderer.cpp  window.cpp
src/include/GL/: glad.c  glad.h
src/types/: module.cpp  shader.cpp  uuid.cpp
src/ui/: layout.cpp  modifier.cpp
(+24 files in other folders)
